# alicebot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
example/: CMakeLists.txt
example/src/: ImageLogger.cpp  ImageLogger.h  MessageLogger.cpp  MessageLogger.h  main.cpp
include/: BotApiRequest.h  BotClient.h  BotMessageObserver.h  CurlRequest.h  Message.h  RequestParam.h  User.h
include/types/: Chat.h  File.h  Message.h  PhotoSize.h  User.h
src/: BotApiRequest.cpp  BotClient.cpp  BotMessageObserver.cpp  CurlRequest.cpp  Message.cpp  User.cpp  main.cpp
src/types/: Chat.cpp  File.cpp  Message.cpp  PhotoSize.cpp  User.cpp
tests/: AliceBotTestsSuite.cpp  BotApiFakeRequest.cpp  BotApiFakeRequest.h  BotApiRequestTest.cpp  BotApiRequestTest.h  BotClientTest.cpp  BotClientTest.h  BotMessageObserverTest.cpp  BotMessageObserverTest.h  CMakeLists.txt  ChatTest.cpp  FileTest.cpp  FileTest.h  MessageObserverTest.cpp  MessageTest.cpp  MessageTest.h  PhotoSizeTest.cpp  PhotoSizeTest.h  UserTest.cpp  UserTest.h  tests.cpp
